--- a/OpenGL_test_4.6_a/OpenGL_test_4.6_a.vcxproj.filters
+++ b/OpenGL_test_4.6_a/OpenGL_test_4.6_a.vcxproj.filters
@@ -39,4 +39,12 @@
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="MeshVertexShader.glsl" />
+    <None Include="MeshFragmentShader.glsl" />
+    <None Include="EdgeFragmentShader.glsl" />
+    <None Include="LineFragmentShader.glsl" />
+    <None Include="EdgeVertexShader.glsl" />
+    <None Include="LineVertexShader.glsl" />
+  </ItemGroup>
 </Project>
