--- a/OpenGL_test_4.6_a/OpenGL_test_4.6_a.vcxproj.filters
+++ b/OpenGL_test_4.6_a/OpenGL_test_4.6_a.vcxproj.filters
@@ -54,6 +54,7 @@
     <None Include="shaders\SphereTesselationFragmentShader.glsl" />
     <None Include="shaders\SphereTesselationVertexShader.glsl" />
     <None Include="shaders\MeshVertexShader.glsl" />
+    <None Include="shaders\BezierShaderProgram.glsl" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="Todo.txt" />
