Moved mesh caching and rendering to OpenGL backend

--- a/OpenGL_test_4.6_a/OpenGL_test_4.6_a.vcxproj
+++ b/OpenGL_test_4.6_a/OpenGL_test_4.6_a.vcxproj
@@ -189,12 +189,14 @@
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Backend\BackendMesh.cpp" />
     <ClCompile Include="Backend\BackendShaderProgram.cpp" />
     <ClCompile Include="Backend\BackendStandardShaderProgram.cpp" />
     <ClCompile Include="Backend\BackendTesselationShaderProgram.cpp" />
     <ClCompile Include="Backend\BackendContext.cpp" />
     <ClCompile Include="Backend\BackendWindow.cpp" />
     <ClCompile Include="OpenGLBackend\private\OpenGLShaderProgram.cpp" />
+    <ClCompile Include="OpenGLBackend\private\OpenGLMesh.cpp" />
     <ClCompile Include="Utilities\Exception.cpp" />
     <ClCompile Include="Utilities\Misc.cpp" />
     <ClCompile Include="OpenGLBackend\OpenGLBackend.cpp" />
@@ -213,12 +215,14 @@
     <ClCompile Include="View\View.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Backend\BackendMesh.h" />
     <ClInclude Include="Backend\BackendShaderProgram.h" />
     <ClInclude Include="Backend\BackendStandardShaderProgram.h" />
     <ClInclude Include="Backend\BackendTesselationShaderProgram.h" />
     <ClInclude Include="Backend\BackendContext.h" />
     <ClInclude Include="Backend\BackendWindow.h" />
     <ClInclude Include="OpenGLBackend\private\OpenGLShaderProgram.h" />
+    <ClInclude Include="OpenGLBackend\private\OpenGLMesh.h" />
     <ClInclude Include="Utilities\Exception.h" />
     <ClInclude Include="Utilities\Misc.h" />
     <ClInclude Include="OpenGLBackend\OpenGLBackend.h" />
